ummm i added more

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,23 @@
     />
     <title>That's My Boy</title>
   </head>
+
+<!-- thissss here is where i left off. im confused. This makes the initial loading page look ok, but when switching 
+pages the body follows....obviously i guess. so this  needs to change AKA make react work like its suppose to-->
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="root"></div><div class="topnav">
+      <a href="index.html">Home</a>
+      <a href="pics.html">Photos</a></li>
+      <a href="stats">Stats</a></li>
+      <a href="friends">Friends</a></li>
+      <a href="reviews.html">Reviews</a></li>
+    </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    
+    <script src="index.js"></script>
+    <footer class="footer">Established 2022</footer>
+    <script src="./src/App.css"></script>
   </body>
 </html>
