it appears to be working

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 pages the body follows....obviously i guess. so this  needs to change AKA make react work like its suppose to-->
 
   <body>
-    <div id="root"></div><div class="topnav">
+    <div id="root"></div>
+    <!-- <div class="topnav">
       <a href="index.html">Home</a>
       <a href="pics.html">Photos</a></li>
       <a href="stats">Stats</a></li>
@@ -27,6 +28,6 @@ pages the body follows....obviously i guess. so this  needs to change AKA make r
     
     <script src="index.js"></script>
     <footer class="footer">Established 2022</footer>
-    <script src="./src/App.css"></script>
+    <script src="./src/App.css"></script> -->
   </body>
 </html>
